update embed code

--- a/app/index.html
+++ b/app/index.html
@@ -74,9 +74,7 @@
         <div class="container">
             <div id="stats-content">
                 <div class="col-xs-12 col-md-6">
-                    <figure>
-                        <embed src="https://wakatime.com/share/@codebymick/b1318cf2-b51c-4e3d-bc2c-13649c298b65.svg"></embed>
-                    </figure>
+                    <figure><embed src="https://wakatime.com/share/@codebymick/dc47e788-33dc-4626-9190-113faa1be461.svg"></embed></figure>
                 </div>
                 <div class="col-xs-12 col-md-6">
                     <figure>
